Update 1. Introduction to SAKERNAS.md

--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
@@ -104,62 +104,7 @@ systematic random sampling.
   
 ## What is the geographic significance level?
 
-The official reports detail results by gender, sector (i.e. urban or rural), province, and district (or kab). Province is the first administrative level at which data from 1989 to 2006 are representative whereas district is the second level at which data from 2007 to 2019 are representative.
-
-Quite a few historical changes happened to administrative divisions in Indonesia during the time period of interest considering the long duration. The provinces and districts in SAKERNAS do not necessarily reflect the real administrative divisions in the same year. For example, in SAKERNAS 1991 and 1993, there are only 24 unique province codes in the raw datasets and only 9 of 24 appear in other years. However, since they are unlabelled, we did not map 1991 and 1993 to other years, meaning all provinces in the table below will not appear in 1991 and 1993. Another example is that 54-Timur Timor (or East Timor) became independent from Indonesia in 2002 but SAKERNAS excludes Timur Timor since 2000. 
-
-One reason is because of the time lag – SAKERNAS might still used the old names and coding for provinces even though the system has been changed. Or on the contrary, SAKERNAS had acted before the change actually happened. The other reason is the lack of information about province names or inconsistent coding of divisions in some years. For our harmonization purpose, we used province names in the last harmonized year, 2019, as the standard version for all years' provinces; and year 2013 for all years' districts. 
-
-In summary:
-
-1. SAKERNAS is significant at **province** level: 1989-2006 ; siginificant at **district** level: 2007-2019
-2. Number of province changes from 27 in 1989 to 34 in 2019
-3. Year 1991 and year 1993 might use other coding scheme for province. The raw data of these two years only contain 24 unique codes (see the screenshot of 1991 below). without labels. As they are unlabelled, they cannot be fully comprehended and were not mapped to other years. Users who want to have a time series of province are advised to drop 1991 and 1993. 
-   
-![1991_propcodes](https://user-images.githubusercontent.com/84488698/165405147-de058fde-e4e9-47f6-84e7-5c2b219674e9.png)
-
-
-The table below lists all the 34 provinces in Indonesia since 2015 till now, using their current names and codes:
-
-|   **Code**   | **Province** | **Year of Appearance** | **Reason for Exclusion** |
-| :------: | :------: | :-------------: | :-----: | 
-| **11** | **ACEH**         | 1989-1990, 1992, 1994-2019               | 1991 & 1993 unlabelled| 
-| **12** | **SUMATERA UTARA**         |  1989-1990, 1992, 1994-2019            |  1991 & 1993 unlabelled    |
-| **13** | **SUMATERA BARAT**         |  1989-1990, 1992, 1994-2019               |  1991 & 1993 unlabelled | 
-| **14** | **RIAU**         |  1989-1990, 1992, 1994-2019 |  1991 & 1993 unlabelled | 
-| **15** | **JAMBI**         |  1989-1990, 1992, 1994-2019 | 1991 & 1993 unlabelled| 
-| **16** | **SUMATERA SELATAN**         |  1989-1990, 1992, 1994-2019 | 1991 & 1993 unlabelled | 
-| **17** | **BENGKULU**         |  1989-1990, 1992, 1994-2019  |  1991 & 1993 unlabelled| 
-| **18** | **LAMPUNG**         |  1989-1990, 1992, 1994-2019 | 1991 & 1993 unlabelled | 
-| **19** | **KEPULAUAN BANGKA BELITUNG**         |  2001-2019               | Split from SUMATERA SELATAN in 2000     | 
-| **21** | **KEPULAUAN RIAU**         |  2005-2019                | Split from RIAU in 2002  | 
-| **31** | **DKI JAKARTA**         |  1989-1990, 1992, 1994-2019 |  1991 & 1993 unlabelled | 
-| **32** | **JAWA BARAT**         |  1989-1990, 1992, 1994-2019  | 1991 & 1993 unlabelled| 
-| **33** | **JAWA TENGAH**         |  1989-1990, 1992, 1994-2019   |  1991 & 1993 unlabelled|  
-| **34** | **DI YOGYAKARTA**         |  1989-1990, 1992, 1994-2019| 1991 & 1993 unlabelled| 
-| **35** | **JAWA TIMUR**         |  1989-1990, 1992, 1994-2019 |  1991 & 1993 unlabelled| 
-| **36** | **BANTEN**         |  2001-2019               | Split from JAWA BARAT in 2000   | 
-| **51** | **BALI**        |  1989-1990, 1992, 1994-2019               | 1991 & 1993 unlabelled|   
-| **52** | **NUSA TENGGARA BARAT**         |  1989-1990, 1992, 1994-2019               | 1991 & 1993 unlabelled|
-| **53** | **NUSA TENGGARA TIMUR**         |  1989-1990, 1992, 1994-1999               | 1991 & 1993 unlabelled|
-| **54** | **TIMUR TIMOR**         |  1989-1990, 1992, 1994-1999               | Became independent in 2002    | 
-| **61** | **KALIMANTAN BARAT**         |  1989-1990, 1992, 1994-2019             | 1991 & 1993 unlabelled| 
-| **62** | **KALIMANTAN TENGAH**         |  1989-1990, 1992, 1994-2019               | 1991 & 1993 unlabelled| 
-| **63** | **KALIMANTAN SELATAN**         |  1989-1990, 1992, 1994-2019              | 1991 & 1993 unlabelled| 
-| **64** | **KALIMANTAN TIMUR**         |  1989-1990, 1992, 1994-2019               |  1991 & 1993 unlabelled|  
-| **65** | **KALIMANTAN UTARA**         |  2015-2019               | Split from KALIMANTAN TIMUR in 2012  | 
-| **71** | **SULAWESI UTARA**         |  1989-1990, 1992, 1994-2019               | 1991 & 1993 unlabelled |  
-| **72** | **SULAWESI TENGAH**         |  1989-1990, 1992, 1994-2019               | 1991 & 1993 unlabelled | 
-| **73** | **SULAWESI SELATAN**         |  1989-1990, 1992, 1994-2019               | 1991 & 1993 unlabelled |  
-| **74** | **SULAWESI TENGGARA**         |  1989-1990, 1992, 1994-2019               | 1991 & 1993 unlabelled |
-| **75** | **GORONTALO**         |  2001-2019               | Split from SULAWESI UTARA in 2000 |
-| **76** | **SULAWESI BARAT**        |  2006-2019               | Split from SULAWESI SELATAN in 2004   | 
-| **81** | **MALUKU**        |  1989-1990, 1992, 1994-1999，2001-2019               | 1991 & 1993 unlabelled; not surveyed in 2000 | 
-| **82** | **MALUKU UTARA**         |  1989-1990, 1992, 1994-2019               | 1991 & 1993 unlabelled | 
-| **91** | **PAPUA BARAT**         |  2001-2002，2006-2019               | Split from PAPUA in 2003    | 
-| **92** | **IRIAN JAYA TENGAH**         |  2001-2002               | Split from PAPUA in 2003      | 
-| **93** | **Irian JAYA TIMUR**         |  2001-2002               | Split from PAPUA in 2003      |  
-| **94** | **PAPUA**         |  2003-2019              | Not incluided in the survey untill 2003                 | 
+The official reports detail results by gender, sector (i.e. urban or rural), province, and district (or kab). Province is the first administrative level at which data from 1989 to 2006 are representative whereas district is the second level at which data from 2007 to 2019 are representative. Variable `subnatid1_prev' in the harmonized dataset shows how the provinces change throughout time. More details about historical changes to administrative divisions can be found in this separate [document](Geographic_Significance_Level.md).
 
 
 ## Other noteworthy aspects
