Update 1. Introduction to SAKERNAS.md

--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
@@ -104,7 +104,7 @@ systematic random sampling.
   
 ## What is the geographic significance level?
 
-The official reports detail results by gender, sector (i.e. urban or rural), province, and district (or kab). Province is the first administrative level at which data from 1989 to 2006 are representative whereas district is the second level at which data from 2007 to 2019 are representative. Variable `subnatid1_prev' in the harmonized dataset shows how the provinces change throughout time. More details about historical changes to administrative divisions can be found in this separate [document](Geographic_Significance_Level.md).
+The official reports detail results by gender, sector (i.e. urban or rural), province, and district (or kab). Province is the first administrative level at which data from 1989 to 2006 are representative whereas district is the second level at which data from 2007 to 2019 are representative. Variable `subnatid1_prev1` in the harmonized dataset shows how the provinces change throughout time. More details about historical changes to administrative divisions can be found in this separate [document](Geographic_Significance_Level.md).
 
 
 ## Other noteworthy aspects
