Update 1. Introduction to SAKERNAS.md

--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
@@ -144,6 +144,8 @@ Finally, it is worth pointing out that the age required for education and labor 
 
 ### Coding of industry and occupation codes
 
-Regarding industrial classification, 6 versions of Indonesian Standard Industrial Classification (KBLI) were involved from 1989 to 2019 – KLUI1990, KLUI1997, KBLI2000, KBLI2005, KBLI2009, and KBLI2015. They were based on different versions of ISIC and were used in different years of SAKERNAS. So far, we have only mapped years using KBLI2015 and KBLI2009 to their ISIC counterparts. The difficulty of mapping industry code comes from 1) lack of guidebook on each of these KBLI versions as well as the correspondence table among themselves; 2) lack of correspondence between KBLI and ISIC (except KBLI2015 and KBLI2009); 3) incomplete industrial coding in the raw datasets. Although most SAKERNAS provide several versions of industrial classification in a given year's raw dataset, in most cases, these variables do not have value labels indicating the industry names, which could not be made of use. Details about mapping KBLI2015 and KBLI2009 to ISIC are covered in the [separate document.](Correspondence_National_International_Classifications.md) 
+Regarding industrial classification, 5 versions of Indonesian Standard Industrial Classification (KBLI) were involved from 1989 to 2019 – KLUI1997, KBLI2000, KBLI2005, KBLI2009, and KBLI2015. They were based on different versions of ISIC and were used in different years of SAKERNAS. in the [separate document.](Correspondence_National_International_Classifications.md) 
 
-Occupational classification is even more difficult than industrial to be mapped to the International Standard Classification of Occupations (ISCO). Four versions of Indonesian Standard Occupational Codes (KBJI) were involved – KBJI1982, KBJI2000, KBJI2002, KBJI2014. However, without instructions on each version of occupational codes and how they correspond to ISCO codes, it is hard to develop a correspondence table for the mapping for all years. Therefore, we only provided the one-digit occupational classification for `occup` when KBJI2002 is available and the original occupational code with the most digits in the raw dataset.   
+Although four versions of Indonesian Standard Occupational Codes (KBJI) were involved – KBJI1982, KBJI2000, KBJI2002, KBJI2014, we only used KBJI1982 and KBJI2002 during our mappiong process. Some years of SAKERNAS provide three versions of KBJI in the raw datasets yet with differet degrees of specifications. For example, SAKERNAS 2011 has KBJI 1982 three digits, 2000 1 digit and 2002 1 digit. But KBJI1982 three digits is the version we used most since it carries more information on occupation. 
+
+Details about industrial and occuaptional mappings are covered in this [separate document.](Correspondence_National_International_Classifications.md) 
