Revert "Update 1. Introduction to SAKERNAS.md"
This reverts commit 52b370c95181b32d23fc10c2ac5e418732a72f03.

--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
@@ -144,7 +144,7 @@ Finally, it is worth pointing out that the age required for education and labor 
 
 ### Coding of industry and occupation codes
 
-Regarding industrial classification, 5 versions of Indonesian Standard Industrial Classification (KBLI) were involved from 1989 to 2019 – KLUI1997, KBLI2000, KBLI2005, KBLI2009, and KBLI2015. They were based on different versions of ISIC and were used in different years of SAKERNAS.
+Regarding industrial classification, 5 versions of Indonesian Standard Industrial Classification (KBLI) were involved from 1989 to 2019 – KLUI1997, KBLI2000, KBLI2005, KBLI2009, and KBLI2015. They were based on different versions of ISIC and were used in different years of SAKERNAS. in the [separate document.](Correspondence_National_International_Classifications.md) 
 
 Although four versions of Indonesian Standard Occupational Codes (KBJI) were involved – KBJI1982, KBJI2000, KBJI2002, KBJI2014, we only used KBJI1982 and KBJI2002 during our mappiong process. Some years of SAKERNAS provide three versions of KBJI in the raw datasets yet with differet degrees of specifications. For example, SAKERNAS 2011 has KBJI 1982 three digits, 2000 1 digit and 2002 1 digit. But KBJI1982 three digits is the version we used most since it carries more information on occupation. 
 
