--- a/Support/B - Country Survey Details/ZAF/QLFS/1. Introduction to QLFS.md
+++ b/Support/B - Country Survey Details/ZAF/QLFS/1. Introduction to QLFS.md
@@ -153,11 +153,11 @@ Regarding occupational classification, all QLFS years code occupation based on [
 
 ### Assembling annual data using QLFS and LMDSA
 
-The difference between LMDSA and QLFS is that the former compiles data collected in all QLFSs, that is four individual data sets representing four quarters, in a given year. All variables and observations remain the same in LMDSA except that the variable of weight is divided by four in LMDSA.
+As stated at the beginning, data is available freely on the [Data First website](https://www.datafirst.uct.ac.za/dataportal/index.php/catalog/StatsSA) as quarterly release (Quarterly Labour Force Survey - QLFS) and as a single, year-round data set (the Labour Market Dynamics in South Africa, LMDSA, file). All variables and observations remain the same in LMDSA except that the variable of weight is divided by four in LMDSA.
 
-All years except 2020 have both LMDSA and QLFS available on DataFirst, and therefore, we used LMDSA for harmonization because of its simplicity and QLFS for cross-checking purposes. For year 2020, the annual data set was assembled manually by appending four QLFS data sets and dividing `weight` by four.
+All years have both LMDSA and QLFS available on DataFirst, and therefore, we used LMDSA for harmonization because of its simplicity and QLFS for cross-checking purposes. Note that the [first version of the 2020 code](https://github.com/worldbank/gld/tree/main/GLD/ZAF/ZAF_2020_QLFS/ZAF_2020_QLFS_v01_M_v01_A_GLD/Programs) used QLFS data as LMDSA was not yet available. This has been updated in [ZAF_2020_QLFS_v02_M_v01_A_GLD](https://github.com/worldbank/gld/blob/main/GLD/ZAF/ZAF_2020_QLFS/ZAF_2020_QLFS_v02_M_v01_A_GLD/Programs/ZAF_2020_QLFS_v02_M_v01_A_GLD_ALL.do).
 
-Year 2012 and 2016 need special attention. Using LMDSA alone for these two years are not enough because they both lose information to some degree. LMDSA 2012 does not contain `Q19ATTE` which is necessary for generating the GLD variable `school`. The solution is to append QLFSs in 2012 and extract `Q19ATTE` and merge it into LMDSA 2012. Similarly, LMDSA 2016 do not have complete information on `Geo_type`. This variable can be obtained from QLFS 2016 and brought into LMDSA 2016 to get the intermidiate dta file.  
+Moreover, years 2012 and 2016 need special attention. Using LMDSA alone for these two years is not enough because they both lose information to some degree. LMDSA 2012 does not contain variable `Q19ATTE` which is necessary for generating the GLD variable `school`. The solution is to append QLFSs in 2012 and extract `Q19ATTE` and merge it into LMDSA 2012. Similarly, LMDSA 2016 do not have complete information on `Geo_type`. This variable can be obtained from QLFS 2016 and brought into LMDSA 2016 to get the intermidiate dta file.  
 
 ### Change in implementation
 
