--- a/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
+++ b/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
@@ -1,20 +1,18 @@
 
-# Introduction to [Full Name of Survey] ([Survey Acronym)]
+# Introduction to ["GRAN ENCUESTA INTEGRADA DE HOGARES"] ([GEIH) or the Extended Unified Household Survey]
 
-- [What is the CCC survey?](#what-is-the-ccc-survey-acronym)
-- [What does the CCC survey cover?](#what-does-the-ccc-survey-acronym-cover)
+- [What is the COL survey?](#what-is-the-COL-GEIH)
+- [What does the COL survey cover?](#what-does-the-COL-GEIH)
 - [Where can the data be found?](#where-can-the-data-be-found)
 - [What is the sampling procedure?](#what-is-the-sampling-procedure)
 - [What is the significance level?](#what-is-the-geographic-significance-level)
 - [Other noteworthy aspects](#other-noteworthy-aspects)
 
-## What is the [CCC] [survey Acronym]?
+## What is the COL GEIH?
 
-Short introduction to what the survey is, meaning a paragraph of a few lines. Example:
+The Extended unified Colombian household survey (GEIH) is the national household survey that records information from the labour force, income and household spending since 2006 (in the current format). Earlier, the EHN (the 1970s) or national household survey was used to record this information. 
 
-The Indian Employment and Unemployment Survey (EUS) is the Indian Labour Force Survey run as part to India’s National Sample Survey series from 1987 to 2011.
-
-## What does the [CCC] [survey Acronym] cover?
+## What does the COL GEIH cover?
 
 Short paragraph on the topics covered as well as information on the years and the sample sizes. One way to generate a table is to use the [Individual and Household ID tabulator tool in R](../Z%20-%20Other%20Tools/Global/unique_hh_ind_obs.R) Example:
 
