--- a/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
+++ b/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
@@ -1,5 +1,5 @@
 
-# Introduction to ["GRAN ENCUESTA INTEGRADA DE HOGARES"] ([GEIH) or the Extended Unified Household Survey]
+# Introduction to "GRAN ENCUESTA INTEGRADA DE HOGARES" (GEIH) or the Extended Unified Household Survey of Colombia
 
 - [What is the COL survey?](#what-is-the-COL-GEIH)
 - [What does the COL survey cover?](#what-does-the-COL-GEIH)
@@ -10,7 +10,7 @@
 
 ## What is the COL GEIH?
 
-The Extended unified Colombian household survey (GEIH) is the national household survey that records information from the labour force, income and household spending since 2006 (in the current format). Earlier, the EHN (the 1970s) or national household survey was used to record this information. 
+The Extended unified Colombian household survey (GEIH) is the national household survey that records information from the labour force, income and household spending since 2006 (in the current format). Earlier, the EHN (the 1970s) used to record the national household information. 
 
 ## What does the COL GEIH cover?
 
@@ -20,9 +20,19 @@ The Indian EUS is a labour force survey collecting information on demographic de
 
 | Year	| # of Households	| # of Individuals	|
 | :-------	| :--------		| :--------	 	|
-| 1987	| 129,060		| 667,804		|
-| …	| …			| …			|
-| 2011	| 101,724		| 456,999		|
+| 2009	| 	815,480	| 	220,989	|
+| 2010	| 	821,951	| 	226,261	|
+| 2011	| 	827,522	| 	230,499	|
+| 2012	| 	684,060 | 	209,920 |
+| 2013	| 	772,074	| 	228,944	|
+| 2014	| 	788,101	|   228,932 |
+| 2015	| 	707,597	| 	209,350	|
+| 2016	| 	701,013	|   288,763 |
+| 2017	| 	691,278	|   208,521 |
+| 2018	| 	762,753	|  231,128	|
+| 2019	| 	756,063 | 	231,831	|
+| 2020	| 	747822	| 	229,935	|
+| 2021	| 	711,381 | 	225,853	|
 
 ## Where can the data be found?
 
