--- a/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
+++ b/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
@@ -1,5 +1,5 @@
 
-# Introduction to "GRAN ENCUESTA INTEGRADA DE HOGARES" (GEIH) or the Extended Unified Household Survey of Colombia
+# Introduction to the Colombian "Gran Encuesta Integrada de Hogares" (GEIH)
 
 - [What is the COL survey?](#what-is-the-COL-GEIH)
 - [What does the COL survey cover?](#what-does-the-COL-GEIH)
@@ -10,7 +10,7 @@
 
 ## What is the COL GEIH?
 
-The Extended unified Colombian household survey (GEIH) is the national household survey that records information from the labour force, income and household spending since 2006 (in the current format). Earlier, the EHN (the 1970s) used to record the national household information. 
+The Extended unified Colombian household survey (GEIH) is the colombian national household survey that records information from the labour force, income and household spending since 2006 (in the current format). 
 
 ## What does the COL GEIH cover?
 
@@ -34,7 +34,7 @@ The Colombia GEIH is a household survey collecting information on age, sex, loca
 
 ## Where can the data be found?
 
-The microdata are free and publicly available on the Colombian National Data Archive (ANDA) [National Data Archive of microdata](https://microdatos.dane.gov.co/catalog/MICRODATOS/about_collection/23/?per_page=5). The website also provides all necessary documentation.
+The microdata are free and publicly available on the Colombian National Data Archive (ANDA) [online access](https://microdatos.dane.gov.co/catalog/MICRODATOS/about_collection/23/?per_page=5). The website also provides all necessary documentation for each year, including format of the survey in spss, stata (from september 2017- onwards), cvs and txt.
 
 ## What is the sampling procedure?
 
@@ -42,13 +42,13 @@ The GEIH uses a probabilistic, multistage design, stratified, unequal clustered,
 
 The 2009 manual (see document *Metodología Gran Encuesta Integrada de Hogares* under the ["Related Materials" section of the 2009 documentation site](https://microdatos.dane.gov.co/catalog/207/related_materials)) outlines the sampling procedure as:
 
-    Taking into account the objectives of the GEIH Survey, and the fundamental premises, a probabilistic,                 multi-stage, stratified, unequal conglomerate and self-weighted design was chosen (for the twenty-four capital cities with their metropolitan areas).
+    Taking into account the objectives of the GEIH Survey, and the fundamental premises, a probabilistic, multi-stage, stratified, unequal conglomerate and self-weighted design was chosen (for the twenty-four capital cities with their metropolitan areas).
 
-Note that, even though the sampling logic is consitent over time, there are changes over time (consult each year methodology).
+Note that, even though the sampling logic is consitent over time, there could be changes over time (please consult documentation for each year).
 
 ## What is the geographic significance level?
 
-It cover national information at the urban and rural levels. It also includes information on the lartgest regions and provinces (departments). The sample covers five regions: Atlantic, Oriental, Central, Pacific and Bogota and twenty-four cities and metropolitan areas.
+The data covers national information at the urban and rural levels. It also includes information on the lartgest regions and political geographic representations (departments). Overall, the sample covers five regions: Atlantic, Oriental, Central, Pacific and Bogota and twenty-four cities and metropolitan areas.
 
 ## Other noteworthy aspects
 
@@ -56,5 +56,4 @@ It cover national information at the urban and rural levels. It also includes in
 ### List items as needed and be brief - if longer, refer to other, explicit documents
 
 
-### Other Documentation Files 
 
