--- a/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
+++ b/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
@@ -50,7 +50,29 @@ Note that, even though the sampling logic is consitent over time, there could be
 
 The data covers national information at the urban and rural levels. It also includes information on the lartgest regions and political geographic representations (departments). Overall, the sample covers five regions: Atlantic, Oriental, Central, Pacific and Bogota and twenty-four cities and metropolitan areas.
 
+| 13 large cities	| 11 intermediate Cities	|
+| :-------	| :--------		| 
+|Bogotá | Tunja
+| Medellín - Valle de Aburrá | Florencia
+| Cali - Yumbo | Popayán
+| Barranquilla - Soledad | Valledupar
+| Bucaramanga - Floridablanca - Girón - Piedecuesta | Quibdó
+| Manizales - Villamaría | Neiva
+| Pasto | Riohacha
+| Pereira - Dosquebradas - La Virginia | Santa Marta
+| Ibagué | Armenia
+| Cúcuta - Villa del Rosario - Los Patios - El Zulia | Sincelejo
+| Villavicencio | San Andrés
+| Montería |
+| Cartagena| 
+
+Source. Dane 2021 [GEIH Documentation](https://microdatos.dane.gov.co/index.php/catalog/701/get_microdata)
+
+
+
 ## Other noteworthy aspects
+
+
 
 
 ### List items as needed and be brief - if longer, refer to other, explicit documents
