--- a/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
+++ b/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
@@ -68,14 +68,18 @@ The data covers national information at the urban and rural levels. It also incl
 
 Source. Dane 2021 [GEIH Documentation](https://microdatos.dane.gov.co/index.php/catalog/701/get_microdata)
 
-
-
 ## Other noteworthy aspects
 
+### The year 2020
 
+In 2020 the Colombian institute of statistics (DANE) conducted the GEIH through phone surveys. As a result, the data retrieved contains inconsistencies for March through July. In particular,  personal information (such as labour status) was absent from the survey responses for this month. The absence of information happened due to the challenge of surveying during a global pandemic. As such, the user should note these limitations. The harmonization team has done its best to reduce the consequences of the absence of data in those months. The resulting harmonization is robust enough as per our harmonization methodology. Please, refer to the do-file for this year for further information.
 
+### Absence of ISCO variable 
 
-### List items as needed and be brief - if longer, refer to other, explicit documents
+In the first iteration of the GLD harmonized files for colombia, the isco information is absent for all the years. This is because until recently (mid 2021), the DANE used the national ocupation classification or CNO 1970 to categorize occupations of the labour force. CNO 1970 does not have a direct correspondance to the international occupation classification (ISCO), but it was inspired by the isco 1968. As a result, the harmonization team decided to declare the variables as missing for all the harmonized years.
+
+###  ISIC Classification
+
 
 
 
