--- a/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
+++ b/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
@@ -1,18 +1,18 @@
 
 # Introduction to the Colombian "Gran Encuesta Integrada de Hogares" (GEIH)
 
-- [What is the COL survey?](#what-is-the-COL-GEIH)
-- [What does the COL survey cover?](#what-does-the-COL-GEIH)
+- [What is the COL survey?](#what-is-the-COL-survey)
+- [What does the COL survey cover?](#what-does-the-COL-survey-cover)
 - [Where can the data be found?](#where-can-the-data-be-found)
 - [What is the sampling procedure?](#what-is-the-sampling-procedure)
 - [What is the significance level?](#what-is-the-geographic-significance-level)
 - [Other noteworthy aspects](#other-noteworthy-aspects)
 
-## What is the COL GEIH?
+## What is the COL survey?
 
 The Extended unified Colombian household survey (GEIH) is the colombian national household survey that records information from the labour force, income and household spending since 2006 (in the current format). 
 
-## What does the COL GEIH cover?
+## What does the COL survey cover?
 
 The Colombia GEIH is a household survey collecting information on age, sex, location, migration, education (academic), living conditions,income, labour market activities over 12 months, as well as time use and activities over the previous 7 days.  The years and sample size of GEIH harmonized for GLD are:
 
@@ -76,10 +76,16 @@ In 2020 the Colombian institute of statistics (DANE) conducted the GEIH through 
 
 ### Absence of ISCO variable 
 
-In the first iteration of the GLD harmonized files for colombia, the isco information is absent for all the years. This is because until recently (mid 2021), the DANE used the national ocupation classification or CNO 1970 to categorize occupations of the labour force. CNO 1970 does not have a direct correspondance to the international occupation classification (ISCO), but it was inspired by the isco 1968. As a result, the harmonization team decided to declare the variables as missing for all the harmonized years.
+In the first iteration of the GLD harmonized files for Colombia, the isco information is absent for all the years. Until recently (mid-2021), the DANE used the national occupation classification or CNO 1970 to categorize occupations of the labour force. The CNO 1970 classification does not directly correspond to the international occupation classification (ISCO), but it was inspired by the isco 1968. As a result, the harmonization team decided to declare the variable as missing for all the harmonized years.
 
 ###  ISIC Classification
+the DANE used a version of the international industry classification or ISIC  to classify the economic activities in the household survey (geih). In this [webpage](https://www.dane.gov.co/index.php/sistema-estadistico-nacional-sen/normas-y-estandares/nomenclaturas-y-clasificaciones/tablas-correlativas), DANE has made avaialble tables of correspondance that can be used to compare the national classificaiton to the international version. 
 
+
+| Year	| National classification| ISIC classification	|
+| :-------	| :--------		| :--------		| 
+|2009-2019| ISIC COLOMBIA AC 3 | ISIC REV 3 |
+| 2020-2021 |ISIC COLOMBIA AC 4| ISIC REV 4 |
 
 
 
