--- a/Support/B - Country Survey Details/THA/LFS/1. Introduction to THA LFS.md
+++ b/Support/B - Country Survey Details/THA/LFS/1. Introduction to THA LFS.md
@@ -128,21 +128,21 @@ In 2001, the Thailand LFS changed the area of residence categories to urban and 
 
 Since 2001, the education and employment questions are asked only for respondents aged 15 and above. Between 1995 and 2000, the questions (including those for migration module) are asked for 13 and above. Between 1985 and 1994, the employment and migration questions are asked for 11 and above. Meanwhile, the education questions are asked for 11 and above only between 1988 and 1994, and before then, it applied to ages 7 and above.
 
-### Frequency of surveys
+### Frequency of surveys and its impact on questionnaire design
 
-There have been changes over time in terms of the frequency of the survey rounds. Between 1984 and 1997, there survey is conducted three times a year. The first round used to be conducted in February to coincide with the non-agricultural season. The second round was normally conducted in May to account for the labor force entrants coming from the newly graduated students. The third round was normally held in August during the Agricultural season. Between 1998 and 2001, the Thailand LFS began to conduct the survey quarterly. And 2001 onwards, the survey was conducted monthly.
+There have been changes over time in terms of the frequency of the survey rounds. Between 1984 and 1997, there survey is conducted three times a year. The first round used to be conducted in February to coincide with the non-agricultural season. The second round was normally conducted in May to account for the labor force entrants coming from the newly graduated students. The third round was normally held in August during the Agricultural season. Between 1998 and 2001, the Thailand LFS began to conduct the survey quarterly. And from 2001 onwards, the survey was conducted monthly.
 
-In those years when LFS only had 3 rounds, there is a shorter set of questions asked in the second round. Questions not asked in the second round include: (a) income/wage received, (b) the frequency at which the income/wage is received, (c) province and area of migration, (d) reasons for migration, (e) size of establishment in terms of number of employees, and (f) presence of labor union in the place of employment. 
+In the years when LFS only had 3 rounds, there is a shorter set of questions asked in the second round. Questions not asked in the second round include: (a) income/wage received, (b) the frequency at which the income/wage is received, (c) province and area of migration, (d) reasons for migration, (e) size of establishment in terms of number of employees, and (f) presence of labor union in the place of employment. 
 
 ### Migration
 
 Questions relating to migration were asked only until 2000. Information was available on individual’s previous area and province of residence, and reason for migration. However, the questions were only asked in the first and third rounds of the surveys. 
 
-### Industry
+### Employment: Industry Classification
 
-The Thailand LFS follow the ISIC version 1 between 1985 and 2000, and the ISIC version 3 between 2001 and 2010. The LFS began using the Thailand Standard Industrial Classification of All Economic Activities (TSIC) 2009 in the 2011 survey. The NSO published a correspondence table that will allow the conversion of TSIC 2009 codes into ISIC version 3.
+The Thailand LFS follows the ISIC version 1 between 1985 and 2000, and the ISIC version 3 between 2001 and 2010. The LFS began using the Thailand Standard Industrial Classification of All Economic Activities (TSIC) 2009 in the 2011 survey. The NSO published a correspondence table that will allow the conversion of TSIC 2009 codes into ISIC version 3.
 
-### Occupation
+### Employment: Occupation Classification
 
 The Thailand LFS occupation data followed the coding from the international classification for occupations, i.e., ISCO 1958, ISCO 1988 and ISCO 2008. The harmonization team prepared a separate page that divers deeper into the changes for the case of Thailand and the methodology adopted to convert the outdated ISCO 1958 codes into ISCO 1988.
 
