--- a/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
+++ b/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
@@ -1,5 +1,5 @@
 
-# Introduction to the Colombian "Gran Encuesta Integrada de Hogares" (GEIH)
+# Introduction to the Colombian "Gran Encuesta Integrada de Hogares" (Great Integrated Household Survey - GEIH)
 
 - [What is the COL survey?](#what-is-the-COL-survey)
 - [What does the COL survey cover?](#what-does-the-COL-survey-cover)
@@ -10,7 +10,7 @@
 
 ## What is the COL survey?
 
-The Extended unified Colombian household survey (GEIH) is the colombian national household survey that records information from the labour force, income and household spending since 2006 (in the current format). 
+The Extended unified Colombian household survey (GEIH) is the colombian national household survey that records information from the labour force, income and household spending since 2009 (in the current format). Starting November 2006 selected months used the income and households spending GEIH format , yet after January 2009 all months started using the GEIH format. 
 
 ## What does the COL survey cover?
 
@@ -34,7 +34,7 @@ The Colombia GEIH is a household survey collecting information on age, sex, loca
 
 ## Where can the data be found?
 
-The microdata are free and publicly available on the Colombian National Data Archive (ANDA) [online access](https://microdatos.dane.gov.co/catalog/MICRODATOS/about_collection/23/?per_page=5). The website also provides all necessary documentation for each year, including format of the survey in spss, stata (from september 2017- onwards), cvs and txt.
+The microdata are free and publicly available on the Colombian National Data Archive (ANDA) [online access](https://microdatos.dane.gov.co/catalog/MICRODATOS/about_collection/23/?per_page=5). The microdata is in SPSS, CSV, and TXT format as well as from september 2017- onwards in Stata format. The colombian microdata catalogue also contains all the relevant documentation for each year. 
 
 ## What is the sampling procedure?
 
@@ -42,13 +42,25 @@ The GEIH uses a probabilistic, multistage design, stratified, unequal clustered,
 
 The 2009 manual (see document *Metodología Gran Encuesta Integrada de Hogares* under the ["Related Materials" section of the 2009 documentation site](https://microdatos.dane.gov.co/catalog/207/related_materials)) outlines the sampling procedure as:
 
-    Taking into account the objectives of the GEIH Survey, and the fundamental premises, a probabilistic, multi-stage, stratified, unequal conglomerate and self-weighted design was chosen (for the twenty-four capital cities with their metropolitan areas).
+    Taking into account the objectives of the GEIH Survey, and the fundamental premises, a probabilistic, multi-stage, 
+    stratified, unequal conglomerate and self-weighted design was chosen (for the twenty-four capital cities with their 
+    metropolitan areas).
 
-Note that, even though the sampling logic is consitent over time, there could be changes over time (please consult documentation for each year).
+Note that, even though the sampling logic is consistent over time, there could be changes over time (please consult documentation for each year).
 
 ## What is the geographic significance level?
 
-The data covers national information at the urban and rural levels. It also includes information on the lartgest regions and political geographic representations (departments). Overall, the sample covers five regions: Atlantic, Oriental, Central, Pacific and Bogota and twenty-four cities and metropolitan areas.
+The data covers national information at the urban and rural levels. It also includes information on the largest regions and political geographic representations (departments). Overall, the sample covers five regions: Atlantic, Oriental, Central, Pacific and Bogota and twenty-four cities and metropolitan areas.
+
+The data is:
+
+- Monthly representative nationally.
+- Monthly representative for each of the 24 cities and 13 metropolitan areas
+Annually for the departments.
+
+However, the survey, as we have it now only covers 24 of the 33 departments (technically 32 plus a capital district).
+
+The missing ones are the Caribbean archipelago of San Andres and 8 provinces in Amazonia and Orinoquia. The survey is still representative nationally as they only represent some 5% of the population.
 
 | 13 large cities	| 11 intermediate Cities	|
 | :-------	| :--------		| 
@@ -70,13 +82,13 @@ Source. Dane 2021 [GEIH Documentation](https://microdatos.dane.gov.co/index.php/
 
 ## Other noteworthy aspects
 
-### The year 2020
+### The impact of the COVID-19 pandemic on data collection
 
 In 2020 the Colombian institute of statistics (DANE) conducted the GEIH through phone surveys. As a result, the data retrieved contains inconsistencies for March through July. In particular,  personal information (such as labour status) was absent from the survey responses for this month. The absence of information happened due to the challenge of surveying during a global pandemic. As such, the user should note these limitations. The harmonization team has done its best to reduce the consequences of the absence of data in those months. The resulting harmonization is robust enough as per our harmonization methodology. Please, refer to the do-file for this year for further information.
 
 ### Absence of ISCO variable 
 
-In the first iteration of the GLD harmonized files for Colombia, the isco information is absent for all the years. Until recently (mid-2021), the DANE used the national occupation classification or CNO 1970 to categorize occupations of the labour force. The CNO 1970 classification does not directly correspond to the international occupation classification (ISCO), but it was inspired by the isco 1968. As a result, the harmonization team decided to declare the variable as missing for all the harmonized years.
+In the GLD harmonized files for Colombia, the ISCO information in "occup_isco" is not present. This is because until recently (mid-2021), the DANE used the national occupation classification or CNO 1970 to categorize occupations of the labour force. The CNO 1970 classification does not directly correspond to the international occupation classification (ISCO), but it was inspired by the ISCO 1968. As a result, the harmonization team decided to declare the variable as missing for all the harmonized years.
 
 ###  ISIC Classification
 the DANE used a version of the international industry classification or ISIC  to classify the economic activities in the household survey (geih). In this [webpage](https://www.dane.gov.co/index.php/sistema-estadistico-nacional-sen/normas-y-estandares/nomenclaturas-y-clasificaciones/tablas-correlativas), DANE has made avaialble tables of correspondance that can be used to compare the national classificaiton to the international version. 
