Update occup note

--- a/Support/B - Country Survey Details/THA/LFS/1. Introduction to THA LFS.md
+++ b/Support/B - Country Survey Details/THA/LFS/1. Introduction to THA LFS.md
@@ -149,7 +149,7 @@ The Thailand LFS follows the ISIC version 1 between 1985 and 2000, and the ISIC 
 
 ### Employment: Occupation Classification
 
-The Thailand LFS occupation data followed the coding from the international classification for occupations, i.e., ISCO 1958, ISCO 1988 and ISCO 2008. The harmonization team prepared a separate page that divers deeper into the changes for the case of Thailand and the methodology adopted to convert the outdated ISCO 1958 codes into ISCO 1988.
+The Thailand LFS occupation data followed the coding from the international classification for occupations, i.e., ISCO 1958, ISCO 1988 and ISCO 2008. 
 
 ## Other Documentation Files
 
