Update 1. Introduction to GEIH.md

--- a/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
+++ b/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
@@ -60,6 +60,10 @@ Annually for the departments.
 
 However, the survey, as we have it now only covers 24 of the 33 departments (technically 32 plus a capital district).
 
+<br></br>
+![COL_GEIH](utilities/Col_GEIH_coverage.png)
+<br></br>
+
 The missing ones are the Caribbean archipelago of San Andres and 8 provinces in Amazonia and Orinoquia. The survey is still representative nationally as they only represent some 5% of the population.
 
 | 13 large cities	| 11 intermediate Cities	|
