--- a/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
+++ b/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
@@ -99,5 +99,9 @@ the DANE used a version of the international industry classification or ISIC  to
 |2009-2019| ISIC COLOMBIA AC 3 | ISIC REV 3.1 |
 | 2020-2021 |ISIC COLOMBIA AC 4| ISIC REV 4 |
 
+###  Additional information
 
+1. The choice of cities and regions of Colombia is further discussed in the following page.
+2. For users interested in the method chosen for ensembling the data please visit the following link.
+3. Additional information about the ISIC classification for this survey can be found here.
 
