--- a/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
+++ b/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
@@ -84,14 +84,14 @@ Source. Dane 2021 [GEIH Documentation](https://microdatos.dane.gov.co/index.php/
 
 ### The impact of the COVID-19 pandemic on data collection
 
-In 2020 the Colombian institute of statistics (DANE) conducted the GEIH through phone surveys. As a result, the data retrieved contains inconsistencies for March through July. In particular,  personal information (such as labour status) was absent from the survey responses for this month. The absence of information happened due to the challenge of surveying during a global pandemic. As such, the user should note these limitations. The harmonization team has done its best to reduce the consequences of the absence of data in those months. The resulting harmonization is robust enough as per our harmonization methodology. Please, refer to the do-file for this year for further information.
+Due to the COVID-19 Pandemic, the Colombian NSO conducted the GEIH through phone surveys for the months of March and July. As a result, the data retrieved contains inconsistencies for those months. In particular,  personal information (such as labour status) was absent from the survey responses for this month. The absence of information happened due to the challenge of surveying during a global pandemic. As such, the user should note these limitations. The harmonization team has done its best to reduce the consequences of the absence of data in those months. The resulting harmonization is robust enough as per our harmonization methodology. Please, refer to the do-file for this year for further information.
 
 ### Absence of ISCO variable 
 
 In the GLD harmonized files for Colombia, the ISCO information in "occup_isco" is not present. This is because until recently (mid-2021), the DANE used the national occupation classification or CNO 1970 to categorize occupations of the labour force. The CNO 1970 classification does not directly correspond to the international occupation classification (ISCO), but it was inspired by the ISCO 1968. As a result, the harmonization team decided to declare the variable as missing for all the harmonized years.
 
 ###  ISIC Classification
-the DANE used a version of the international industry classification or ISIC  to classify the economic activities in the household survey (geih). In this [webpage](https://www.dane.gov.co/index.php/sistema-estadistico-nacional-sen/normas-y-estandares/nomenclaturas-y-clasificaciones/tablas-correlativas), DANE has made avaialble tables of correspondance that can be used to compare the national classificaiton to the international version. 
+the DANE used a version of the international industry classification or ISIC  to classify the economic activities in the household survey (geih). In this [webpage](https://www.dane.gov.co/files/sen/nomenclatura/tablasCorrelativas/TablasCorrelativasCIIURev3_1A_C.pdf), DANE has made avaialble tables of correspondance that can be used to compare the national classificaiton to the international version. 
 
 
 | Year	| National classification| ISIC classification	|
