Update 1. Introduction to GEIH.md

--- a/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
+++ b/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
@@ -91,7 +91,7 @@ Due to the COVID-19 Pandemic, the Colombian NSO conducted the GEIH through phone
 In the GLD harmonized files for Colombia, the ISCO information in "occup_isco" is not present. This is because until recently (mid-2021), the DANE used the national occupation classification or CNO 1970 to categorize occupations of the labour force. The CNO 1970 classification does not directly correspond to the international occupation classification (ISCO), but it was inspired by the ISCO 1968. As a result, the harmonization team decided to declare the variable as missing for all the harmonized years.
 
 ###  ISIC Classification
-the DANE used a version of the international industry classification or ISIC  to classify the economic activities in the household survey (geih). In this [webpage](https://www.dane.gov.co/files/sen/nomenclatura/tablasCorrelativas/TablasCorrelativasCIIURev3_1A_C.pdf), DANE has made avaialble tables of correspondance that can be used to compare the national classificaiton to the international version. 
+The DANE used a version of the international industry classification or ISIC  to classify the economic activities in the household survey (geih). In this [webpage](https://www.dane.gov.co/files/sen/nomenclatura/tablasCorrelativas/TablasCorrelativasCIIURev3_1A_C.pdf), DANE has made avaialble tables of correspondance that can be used to compare the national classificaiton to the international version. 
 
 
 | Year	| National classification| ISIC classification	|
@@ -103,5 +103,4 @@ the DANE used a version of the international industry classification or ISIC  to
 
 1. The choice of cities and regions of Colombia is further discussed in the following page.
 2. For users interested in the method chosen for ensembling the data please visit the following link.
-3. Additional information about the ISIC classification for this survey can be found here.
 
