--- a/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
+++ b/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
@@ -101,7 +101,7 @@ The DANE used a version of the international industry classification or ISIC  to
 
 ###  Additional information
 
-1. The choice of cities and regions of Colombia is further discussed in the following page.
+1. The choice of cities and regions of Colombia is further discussed in the following [page](https://github.com/worldbank/gld/blob/4e2d7b83bb93c6c0189d9a114721c20c5eb5799e/Support/B%20-%20Country%20Survey%20Details/COL/GEIH/geography.md).
 2. For users interested in the method chosen for assembling the data please visit the following link.
 3. more detals of the ISIC classification
 
