Update 1. Introduction to GEIH.md

--- a/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
+++ b/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
@@ -102,6 +102,6 @@ The DANE used a version of the international industry classification or ISIC  to
 ###  Additional information
 
 1. The choice of cities and regions of Colombia is further discussed in the following [page](https://github.com/worldbank/gld/blob/4e2d7b83bb93c6c0189d9a114721c20c5eb5799e/Support/B%20-%20Country%20Survey%20Details/COL/GEIH/geography.md).
-2. For users interested in the method chosen for assembling the data please visit the following link.
-3. more detals of the ISIC classification
+2. For users interested in the method chosen for assembling the data please visit the following [link](https://github.com/worldbank/gld/blob/0b78978d5ca8f96ef9106b23548795ccf54a253f/Support/B%20-%20Country%20Survey%20Details/COL/GEIH/data_assembling.md).
+3. More detals of the ISIC classification [here](https://github.com/worldbank/gld/blob/0b78978d5ca8f96ef9106b23548795ccf54a253f/Support/B%20-%20Country%20Survey%20Details/COL/GEIH/ISIC_classification.md).
 
