Update 1. Introduction to GEIH.md

--- a/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
+++ b/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
@@ -103,5 +103,5 @@ The DANE used a version of the international industry classification or ISIC  to
 
 1. The choice of cities and regions of Colombia is further discussed in the following [page](https://github.com/worldbank/gld/blob/4e2d7b83bb93c6c0189d9a114721c20c5eb5799e/Support/B%20-%20Country%20Survey%20Details/COL/GEIH/geography.md).
 2. For users interested in the method chosen for assembling the data please visit the following [link](https://github.com/worldbank/gld/blob/4cfe5f8ee25e160e6391727d1be35bb4458d56b5/Support/B%20-%20Country%20Survey%20Details/COL/GEIH/data_assembling.md).
-3. More detals of the ISIC classification [here](https://github.com/worldbank/gld/blob/638c838e20e07156eb81065c80ea25065d7731d6/Support/B%20-%20Country%20Survey%20Details/COL/GEIH/ISIC_classification.md).
+3. More details of the ISIC classification [here](https://github.com/worldbank/gld/blob/638c838e20e07156eb81065c80ea25065d7731d6/Support/B%20-%20Country%20Survey%20Details/COL/GEIH/ISIC_classification.md).
 
